User johns
Date:

    Fix opengl and opengl threads bugs.
    Initial opengl support with va-api only.
    Fix "broken driver" message if empty ring buffer.
    Enable seamless audio track change.
    Fix bug #1302: Unsupported pixel format crash.
    Fix the fix, when sillpicture is called in suspend mode.
    Fix crash, when sillpicture is called in suspend mode.
    Add workaround for zero width+height and ffmpeg >= 1.2.

User johns
Date: Sun Mar 17 15:52:42 CET 2013

    Release Version 0.6.0
    Adds H264 only hardware decoder for still-pictures.
    Enable optional VDR-SPU deocder support.

User anbr
Date: Sun Mar 17 15:49:46 CET 2013

    Update german translation.

User cyril
Date: Wed Mar 6 17:05:10 CET 2013

    Adds raise softhddevice video window support.

User johns
Date: Wed Mar 6 10:30:27 CET 2013

    Adds optional only complete mpeg packets support.
    Fixes text of EAC-3 pass-through setup.
    Try to start or connect to X11 server with -xx.
    Try to use HBR (High Bit-Rate) for EAC3.
    Improved pass-through (PCM+EAC3) support.
    Support VDR 1.7.36 new build system.
    Improves VDPAU display preemption handling.
    Add modifiers to X11 remote key names (from Sibbi).
    Add compatibility with >=ffmpeg 1.1.
    Adds PIP (Picture-in-Picture) support.
    Split mpeg packets in receiver thread.

User horchi
Date: Tue Jan  1 17:58:54 CET 2013

    Adds VDR SeduAtmo Plugin support.

User johns
Date: Tue Jan  1 15:21:28 CET 2013

    Support multiple streams with ScaleVideo.
    Makes 4:3 and 16:9 display format configurable.
    Don't use DVB display format.

User Zoolook
Date: Tue Jan  1 12:49:19 CET 2013

    Add support for new vdr ScaleVideo API.

User johns
Date: Tue Jan  1 12:40:12 CET 2013

    Add support for old PES HDTV recording.
    Disable trickspeed hack, to prevent ffmpeg crash.
    Makes X11 server arguments configurable.
    Add german translation.

User FireFly
Date: Sun Nov 18 21:15:50 CET 2012

    Add german translation.
